--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "firebase": "^10.11.1",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.8.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-phone-number-input": "^3.4.1",
+    "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
