--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.4.1",
     "react-router-dom": "^6.22.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
